mysql.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: onix
  name: mysql-service
  labels:
    app: phpmyadmin
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306   
  selector:
    app: phpmyadmin
    tier: mysql

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: onix
  name: mysql-deployment
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
      tier: mysql
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: phpmyadmin
        tier: mysql
    spec:
      containers:
      - image: mysql:8.0.30-debian
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-volume
        persistentVolumeClaim:
          claimName: mysql-volume
