phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: onix
  name: phpmyadmin-service
  labels:
    app: phpmyadmin
spec:
  ports:
    - port: 80
      targetPort: 80
      name: phpmyadmin
  selector:
    app: phpmyadmin
    tier: phpmyadmin
 
---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: onix
  name: phpmyadmin-deployment
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
      tier: phpmyadmin
  strategy:
    type: Recreate
  replicas: 2  
  template:
    metadata:
      labels:
        app: phpmyadmin
        tier: phpmyadmin
    spec:
      containers:
      - image: phpmyadmin:5.2.0
        name: phpmyadmin
