lesson6.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: onix

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  namespace: onix
  annotations:
   nginx.ingress.kubernetes.io/affinity: "cookie"
   nginx.ingress.kubernetes.io/affinity-mode: persistent

spec:
  rules:
  - host: intern.com
    http: 
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
---

apiVersion: v1
kind: Service
metadata:
  namespace: onix
  name: mysql-service
  labels:
    app: phpmyadmin
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306   
  selector:
    app: phpmyadmin
    tier: mysql

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: onix
  name: mysql-deployment
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
      tier: mysql
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: phpmyadmin
        tier: mysql
    spec:
      containers:
      - image: mysql:8.0.30-debian
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-volume
        persistentVolumeClaim:
          claimName: mysql-volume

---

apiVersion: v1
kind: Service
metadata:
  namespace: onix
  name: phpmyadmin-service
  labels:
    app: phpmyadmin
spec:
  ports:
    - port: 80
      targetPort: 80
      name: phpmyadmin
  selector:
    app: phpmyadmin
    tier: phpmyadmin
 
---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: onix
  name: phpmyadmin-deployment
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
      tier: phpmyadmin
  strategy:
    type: Recreate
  replicas: 2  
  template:
    metadata:
      labels:
        app: phpmyadmin
        tier: phpmyadmin
    spec:
      containers:
      - image: phpmyadmin:5.2.0-apache
        name: phpmyadmin
